k8s/deployments/nginx/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
spec:
  rules:
    - host: nginx.kunszg.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kbot-website-service
                port:
                  number: 40100
